--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -308,7 +308,7 @@ resources:
   icon: github-circle
   source:
     uri: https://github.com/cloud-gov/stratos
-    branch: apb/rollback-stratos
+    branch: master
 
 - name: next-stratos-release
   type: github-release
