verifying changes to Node dependencies in Stratos didn't break anything

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -306,7 +306,8 @@ resources:
   icon: github-circle
   source:
     uri: https://github.com/cloud-gov/stratos
-    branch: master
+      #branch: master
+    branch: apb/rollback-stratos
 
 - name: next-stratos-release
   type: github-release
