--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -2,7 +2,7 @@
 jobs:
   - name: set-self
     plan:
-      - get: cg-deploy-stratos
+      - get: config
         trigger: true
       - set_pipeline: self
         file: cg-deploy-stratos/ci/pipeline.yml
@@ -18,6 +18,7 @@ jobs:
             params:
               include_source_tarball: true
           - get: config
+            passed: [set-self]
             trigger: true
       - task: precompile
         config:
@@ -163,6 +164,7 @@ jobs:
             params:
               unpack: true
           - get: config
+            passed: [set-self]
             trigger: false
       - put: create-db
         resource: cf-cli-staging
@@ -224,6 +226,7 @@ jobs:
             params:
               unpack: true
           - get: config
+            passed: [set-self]
             trigger: false
       - put: create-db
         resource: cf-cli-production
@@ -293,22 +296,6 @@ resource_types:
       tag: latest
 
 resources:
-  - name: cg-deploy-stratos
-    icon: github-circle
-    type: git
-    source:
-      uri: ((github-uri))
-      branch: ((github-branch))
-      commit_verification_keys: ((cloud-gov-pgp-keys))
-
-  - name: stratos-source
-    type: git
-    icon: github-circle
-    source:
-      uri: https://github.com/cloud-gov/stratos
-      branch: main
-      commit_verification_keys: ((cloud-gov-pgp-keys))
-
   - name: config
     type: git
     icon: github-circle
