modified:   ci/pipeline.yml - missed to harden a few more puts

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -146,6 +146,16 @@ jobs:
           plan: medium-psql
       - put: cf-dev
         params:
+          config:
+            platform: linux
+          image_resource:
+            type: registry-image
+            source:
+              aws_access_key_id: ((ecr_aws_key))
+              aws_secret_access_key: ((ecr_aws_secret))
+              repository: harden-concourse-task
+              aws_region: us-gov-west-1
+              tag: ((harden-concourse-task-tag))
           path: compiled
           current_app_name: stratos
           manifest: compiled/manifest.yml
@@ -197,6 +207,16 @@ jobs:
           <<: *db-params
       - put: cf-staging
         params:
+          config:
+            platform: linux
+          image_resource:
+            type: registry-image
+            source:
+              aws_access_key_id: ((ecr_aws_key))
+              aws_secret_access_key: ((ecr_aws_secret))
+              repository: harden-concourse-task
+              aws_region: us-gov-west-1
+              tag: ((harden-concourse-task-tag))
           path: compiled/
           current_app_name: stratos
           manifest: compiled/manifest.yml
@@ -214,6 +234,16 @@ jobs:
         # This can eventually be removed, once we're sure nobody is linking to
         # dashboard-beta.
         params:
+          config:
+            platform: linux
+          image_resource:
+            type: registry-image
+            source:
+              aws_access_key_id: ((ecr_aws_key))
+              aws_secret_access_key: ((ecr_aws_secret))
+              repository: harden-concourse-task
+              aws_region: us-gov-west-1
+              tag: ((harden-concourse-task-tag))
           path: config/redirects
           manifest: config/redirects/manifest.yml
           current_app_name: dashboard-beta-redirects
@@ -258,6 +288,16 @@ jobs:
           <<: *db-params
       - put: cf-production
         params:
+          config:
+            platform: linux
+          image_resource:
+            type: registry-image
+            source:
+              aws_access_key_id: ((ecr_aws_key))
+              aws_secret_access_key: ((ecr_aws_secret))
+              repository: harden-concourse-task
+              aws_region: us-gov-west-1
+              tag: ((harden-concourse-task-tag))
           path: compiled/
           current_app_name: stratos
           manifest: compiled/manifest.yml
@@ -275,6 +315,16 @@ jobs:
         # This can eventually be removed, once we're sure nobody is linking to
         # dashboard-beta.
         params:
+          config:
+            platform: linux
+          image_resource:
+            type: registry-image
+            source:
+              aws_access_key_id: ((ecr_aws_key))
+              aws_secret_access_key: ((ecr_aws_secret))
+              repository: harden-concourse-task
+              aws_region: us-gov-west-1
+              tag: ((harden-concourse-task-tag))
           path: config/redirects
           manifest: config/redirects/manifest.yml
           current_app_name: dashboard-beta-redirects
