add resource & new image (#59)
* add resource & new image

* update image:general task

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -21,16 +21,8 @@ jobs:
             passed: [set-self]
             trigger: true
       - task: precompile
+        image: general-task
         config:
-          platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              repository: harden-concourse-task
-              aws_access_key_id: ((ecr_aws_key))
-              aws_secret_access_key: ((ecr_aws_secret))
-              aws_region: us-gov-west-1
-              tag: ((harden-concourse-task-tag))
           inputs:
             - name: stratos-source
             - name: config
@@ -60,19 +52,9 @@ jobs:
                   --exclude-ignore=.cfignore \
                   .
       - put: pre-compiled
+        image: general-task
         params:
           file: pre-compiled/precompiled-stratos.tgz
-          config:
-            platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              aws_access_key_id: ((ecr_aws_key))
-              aws_secret_access_key: ((ecr_aws_secret))
-              repository: harden-concourse-task
-              aws_region: us-gov-west-1
-              tag: ((harden-concourse-task-tag))
-
   - name: compile-stratos
     serial: true
     plan:
@@ -82,20 +64,12 @@ jobs:
         params:
           unpack: true
       - task: build-stratos
+        image: general-task
         config:
           inputs:
             - name: pre-compiled
           outputs:
             - name: compiled
-          platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              repository: harden-concourse-task
-              aws_access_key_id: ((ecr_aws_key))
-              aws_secret_access_key: ((ecr_aws_secret))
-              aws_region: us-gov-west-1
-              tag: ((harden-concourse-task-tag))
           run:
             path: /bin/sh
             args:
@@ -111,19 +85,9 @@ jobs:
                 mv compiled-stratos.tgz ../compiled/
 
       - put: compiled
+        image: general-task
         params:
           file: compiled/compiled-stratos.tgz
-          config:
-            platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              aws_access_key_id: ((ecr_aws_key))
-              aws_secret_access_key: ((ecr_aws_secret))
-              repository: harden-concourse-task
-              aws_region: us-gov-west-1
-              tag: ((harden-concourse-task-tag))
-
   - name: deploy-dev
     serial: true
     plan:
@@ -146,17 +110,8 @@ jobs:
           service: aws-rds
           plan: medium-psql
       - put: cf-dev
+        image: general-task
         params:
-          config:
-            platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              aws_access_key_id: ((ecr_aws_key))
-              aws_secret_access_key: ((ecr_aws_secret))
-              repository: harden-concourse-task
-              aws_region: us-gov-west-1
-              tag: ((harden-concourse-task-tag))
           path: compiled
           current_app_name: stratos
           manifest: compiled/manifest.yml
@@ -207,17 +162,8 @@ jobs:
         params:
           <<: *db-params
       - put: cf-staging
+        image: general-task
         params:
-          config:
-            platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              aws_access_key_id: ((ecr_aws_key))
-              aws_secret_access_key: ((ecr_aws_secret))
-              repository: harden-concourse-task
-              aws_region: us-gov-west-1
-              tag: ((harden-concourse-task-tag))
           path: compiled/
           current_app_name: stratos
           manifest: compiled/manifest.yml
@@ -234,17 +180,8 @@ jobs:
       - put: cf-staging
         # This can eventually be removed, once we're sure nobody is linking to
         # dashboard-beta.
+        image: general-task
         params:
-          config:
-            platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              aws_access_key_id: ((ecr_aws_key))
-              aws_secret_access_key: ((ecr_aws_secret))
-              repository: harden-concourse-task
-              aws_region: us-gov-west-1
-              tag: ((harden-concourse-task-tag))
           path: config/redirects
           manifest: config/redirects/manifest.yml
           current_app_name: dashboard-beta-redirects
@@ -288,17 +225,8 @@ jobs:
         params:
           <<: *db-params
       - put: cf-production
+        image: general-task
         params:
-          config:
-            platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              aws_access_key_id: ((ecr_aws_key))
-              aws_secret_access_key: ((ecr_aws_secret))
-              repository: harden-concourse-task
-              aws_region: us-gov-west-1
-              tag: ((harden-concourse-task-tag))
           path: compiled/
           current_app_name: stratos
           manifest: compiled/manifest.yml
@@ -315,17 +243,8 @@ jobs:
       - put: cf-production
         # This can eventually be removed, once we're sure nobody is linking to
         # dashboard-beta.
+        image: general-task
         params:
-          config:
-            platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              aws_access_key_id: ((ecr_aws_key))
-              aws_secret_access_key: ((ecr_aws_secret))
-              repository: harden-concourse-task
-              aws_region: us-gov-west-1
-              tag: ((harden-concourse-task-tag))
           path: config/redirects
           manifest: config/redirects/manifest.yml
           current_app_name: dashboard-beta-redirects
@@ -399,7 +318,25 @@ resource_types:
     aws_region: us-gov-west-1
     tag: latest
 
+- name: general-task
+  type: registry-image
+  source:
+    aws_access_key_id: ((ecr_aws_key))
+    aws_secret_access_key: ((ecr_aws_secret))
+    repository: general-task
+    aws_region: us-gov-west-1
+    tag: latest
+
 resources:
+  - name: registry-image
+    type: registry-image
+    source:
+    aws_access_key_id: ((ecr_aws_key))
+    aws_secret_access_key: ((ecr_aws_secret))
+    repository: registry-image-resource
+    aws_region: us-gov-west-1
+    tag: latest
+
   - name: stratos-source
     type: git
     icon: github-circle
