--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -11,12 +11,12 @@ jobs:
     serial: true
     plan:
       - in_parallel:
-        - get: stratos-source
-          trigger: true
-        - get: config
-          passed: [set-self]
-          trigger: true
-        - get: general-task
+          - get: stratos-source
+            trigger: true
+          - get: config
+            passed: [set-self]
+            trigger: true
+          - get: general-task
       - task: precompile
         image: general-task
         config:
@@ -58,12 +58,12 @@ jobs:
     serial: true
     plan:
       - in_parallel:
-        - get: pre-compiled
-          passed: [compile-assets]
-          trigger: true
-          params:
-            unpack: true
-        - get: general-task
+          - get: pre-compiled
+            passed: [compile-assets]
+            trigger: true
+            params:
+              unpack: true
+          - get: general-task
       - task: build-stratos
         image: general-task
         config:
@@ -93,12 +93,12 @@ jobs:
     serial: true
     plan:
       - in_parallel:
-        - get: compiled
-          passed: [compile-stratos]
-          trigger: true
-          params:
-            unpack: true
-        - get: general-task
+          - get: compiled
+            passed: [compile-stratos]
+            trigger: true
+            params:
+              unpack: true
+          - get: general-task
       - put: create-db
         resource: cf-cli-dev
         params: &db-params
@@ -144,14 +144,14 @@ jobs:
     serial: true
     plan:
       - in_parallel:
-        - get: compiled
-          passed: [deploy-dev]
-          trigger: true
-          params:
-            unpack: true
-        - get: config
-          trigger: false
-        - get: general-task
+          - get: compiled
+            passed: [deploy-dev]
+            trigger: true
+            params:
+              unpack: true
+          - get: config
+            trigger: false
+          - get: general-task
       - put: create-db
         resource: cf-cli-staging
         params:
@@ -198,14 +198,14 @@ jobs:
     serial: true
     plan:
       - in_parallel:
-        - get: compiled
-          passed: [deploy-staging]
-          trigger: true
-          params:
-            unpack: true
-        - get: config
-          trigger: false
-        - get: general-task
+          - get: compiled
+            passed: [deploy-staging]
+            trigger: true
+            params:
+              unpack: true
+          - get: config
+            trigger: false
+          - get: general-task
       - put: create-db
         resource: cf-cli-production
         params:
@@ -249,59 +249,59 @@ jobs:
         icon_url: ((slack-icon-url))
 
 resource_types:
-- name: registry-image
-  type: registry-image
-  source:
-    aws_access_key_id: ((ecr_aws_key))
-    aws_secret_access_key: ((ecr_aws_secret))
-    repository: registry-image-resource
-    aws_region: us-gov-west-1
-    tag: latest
+  - name: registry-image
+    type: registry-image
+    source:
+      aws_access_key_id: ((ecr_aws_key))
+      aws_secret_access_key: ((ecr_aws_secret))
+      repository: registry-image-resource
+      aws_region: us-gov-west-1
+      tag: latest
 
-- name: cf-cli-resource
-  type: registry-image
-  source:
-    aws_access_key_id: ((ecr_aws_key))
-    aws_secret_access_key: ((ecr_aws_secret))
-    repository: cf-cli-resource
-    aws_region: us-gov-west-1
-    tag: latest
+  - name: cf-cli-resource
+    type: registry-image
+    source:
+      aws_access_key_id: ((ecr_aws_key))
+      aws_secret_access_key: ((ecr_aws_secret))
+      repository: cf-cli-resource
+      aws_region: us-gov-west-1
+      tag: latest
 
-- name: git
-  type: registry-image
-  source:
-    aws_access_key_id: ((ecr_aws_key))
-    aws_secret_access_key: ((ecr_aws_secret))
-    repository: git-resource
-    aws_region: us-gov-west-1
-    tag: latest
+  - name: git
+    type: registry-image
+    source:
+      aws_access_key_id: ((ecr_aws_key))
+      aws_secret_access_key: ((ecr_aws_secret))
+      repository: git-resource
+      aws_region: us-gov-west-1
+      tag: latest
 
-- name: cf
-  type: registry-image
-  source:
-    aws_access_key_id: ((ecr_aws_key))
-    aws_secret_access_key: ((ecr_aws_secret))
-    repository: cf-resource
-    aws_region: us-gov-west-1
-    tag: latest
+  - name: cf
+    type: registry-image
+    source:
+      aws_access_key_id: ((ecr_aws_key))
+      aws_secret_access_key: ((ecr_aws_secret))
+      repository: cf-resource
+      aws_region: us-gov-west-1
+      tag: latest
 
-- name: slack-notification
-  type: registry-image
-  source:
-    aws_access_key_id: ((ecr_aws_key))
-    aws_secret_access_key: ((ecr_aws_secret))
-    repository: slack-notification-resource
-    aws_region: us-gov-west-1
-    tag: latest
+  - name: slack-notification
+    type: registry-image
+    source:
+      aws_access_key_id: ((ecr_aws_key))
+      aws_secret_access_key: ((ecr_aws_secret))
+      repository: slack-notification-resource
+      aws_region: us-gov-west-1
+      tag: latest
 
-- name: s3-iam
-  type: registry-image
-  source:
-    aws_access_key_id: ((ecr_aws_key))
-    aws_secret_access_key: ((ecr_aws_secret))
-    repository: s3-resource
-    aws_region: us-gov-west-1
-    tag: latest
+  - name: s3-iam
+    type: registry-image
+    source:
+      aws_access_key_id: ((ecr_aws_key))
+      aws_secret_access_key: ((ecr_aws_secret))
+      repository: s3-resource
+      aws_region: us-gov-west-1
+      tag: latest
 
 resources:
   - name: stratos-source
@@ -349,6 +349,7 @@ resources:
       password: ((production-cf-password))
       organization: ((production-cf-organization))
       space: ((production-cf-space))
+      cf-cli-version: 8
 
   - name: cf-cli-dev
     type: cf-cli-resource
@@ -358,6 +359,7 @@ resources:
       password: ((dev-cf-password))
       org: ((dev-cf-organization))
       space: ((dev-cf-space))
+      cf-cli-version: 8
 
   - name: cf-cli-staging
     type: cf-cli-resource
@@ -367,6 +369,7 @@ resources:
       password: ((staging-cf-password))
       org: ((staging-cf-organization))
       space: ((staging-cf-space))
+      cf-cli-version: 8
 
   - name: cf-cli-production
     type: cf-cli-resource
